css: fix wrong background color in input search
- duplicated class for input search in file: differences/global.less
  was reason the change in order of css file and priority of css selectors

--- a/tau/src/css/profile/mobile/differences/global.less
+++ b/tau/src/css/profile/mobile/differences/global.less
@@ -53,20 +53,6 @@ fieldset.ui-controlgroup {
 /****************************
  forms.textinput
 ****************************/
-input.ui-input-text:not(.ui-tokentextarea-input) {
-	background: @color_list_editfield;
-	background-image: none;
-	padding: .4em;
-	line-height: 1.4;
-	font-size: 16 * @unit_base;
-	display: block;
-	-ms-border-radius : .1em;
-	-o-border-radius : .1em;
-	-webkit-border-radius : .1em;
-	-moz-border-radius : .1em;
-	border-radius : .1em;
-}
-
 input.ui-tokentextarea-input {
 	font-size : 20 * @unit_base;
 }
